app/packs/styles/trips.scss
@use "base_styles" as bs;

.avatar-img {
  @extend .rounded-circle;
  @extend .object-fit-cover;
  @extend .align-self-center;

  width: bs.$trip-avatar-icon-size;
  height: bs.$trip-avatar-icon-size;
}

.trip-card {
  height: 15rem;

  @include bs.media-breakpoint-up(md) {
    height: 13rem;
  }

  overflow: hidden;
  transition: box-shadow 0.6s ease-in-out;

  img {
    transition: transform 0.6s ease-in-out;
  }

  h2, p {
    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
  }

  &:hover {
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);

    img {
      transform: scale(1.03);
    }
  }

  .text-light {
    @extend .text-break;
  }

  .trip-card-details {
    height: bs.$trip-card-icon-size;
  }

  .avatar-img {
    width: bs.$trip-card-icon-size;
    height: bs.$trip-card-icon-size;
  }

  @include bs.media-breakpoint-down(xl) {
    .trip-card-details {
      height: bs.$trip-card-icon-size-xl;
    }
    
    .avatar-img {
      width: bs.$trip-card-icon-size-xl;
      height: bs.$trip-card-icon-size-xl;
    }
  }
}

.overlay {
  background: linear-gradient(to top, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.1) 100%);
  pointer-events: none;
}

.trip-image-preview {
  @extend .card, .bg-light, .mt-3;
  @extend .object-fit-cover;
  @extend .rounded-top;

  aspect-ratio: 386 / 230;
  width: 33%;
}

@include bs.media-breakpoint-down(md) {
  .trip-image-preview{
    width: 100%;
  }
}

